# AssaultCube-Internal

./: .gitignore  .mcp.json  INJECTION_GUIDE.md  PHASE2_IMPLEMENTATION.md  PROJECT_OVERVIEW.md  QUICK_REFERENCE.md  README.md  REFACTORING.md  SECURITY_IMPROVEMENTS.md  TESTING_GUIDE.md  TESTING_NOTES.md  TRAINER_ANALYSIS.md  TRAINER_UI_OVERLAY_PLAN.md  appsettings.example.json  build.ps1  build_all.ps1  build_trainer.ps1  config.go  db.go  go.mod  go.sum  login.go  main.go  register.go  run.ps1  tuiapp.manifest  tuiapp.rc
.claude/: settings.local.json
injection/: injection.go  launcher.go  stub.go
ipc/: client.go  protocol.go  stub.go
profile/: clientlog.txt
tools/: README.md  checksumtool.go
trainer/: .gitignore  CMakeLists.txt  DirectX-imp  OFFSETS_UPDATE.md  README.md  STATUS.md  ac_offsets.md  actrainer.dll.backup  addresses.md  build.ps1  build_msvc.ps1  minimal.cpp  minimal_test.cpp  test_dll.ps1  test_load.cpp
trainer/include/: aimbot.h  cursor_hook.h  d3d_hook.h  gl_hook.h  memory.h  pipelogger.h  render_utils.h  trainer.h  ui.h
trainer/src/: aimbot.cpp  cursor_hook.cpp  d3d_hook.cpp  dllmain.cpp  gl_hook.cpp  pch.h  pipelogger.cpp  render_utils.cpp  trainer.cpp  ui.cpp
views/: dashboard.go  loadassaultcube.go  login.go  menu.go  register.go  resetpassword.go  styles.go  types.go
